--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -8,6 +8,7 @@
     "history": "^5.1.0",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
+    "modaldialogion": "github:ionson100/modaldialog",
     "oidc-client": "^1.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
